tests/unclear_type/unclear_type.exp
Error ---------------------------------------------------------------------------------------------------- index.js:3:10

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   3| const a: any = 5;
               ^^^


Error ---------------------------------------------------------------------------------------------------- index.js:7:10

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   7| const c: Object = {a: 5};
               ^^^^^^


Error ---------------------------------------------------------------------------------------------------- index.js:9:10

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   9| const d: Function = () => 0;
               ^^^^^^^^


Error --------------------------------------------------------------------------------------------------- index.js:11:16

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   11| const e: () => any = () => 0;
                      ^^^


Error --------------------------------------------------------------------------------------------------- index.js:13:11

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   13| const f: (Object) => Function = ({}) => function() {};
                 ^^^^^^


Error --------------------------------------------------------------------------------------------------- index.js:13:22

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   13| const f: (Object) => Function = ({}) => function() {};
                            ^^^^^^^^


Error --------------------------------------------------------------------------------------------------- index.js:15:15

Unclear type. Using `any`, `Object`, or `Function` types is not safe! (`unclear-type`)

   15| type f2 = <T: Object>(x: T) => T;
                     ^^^^^^


Error ---------------------------------------------------------------------------------------------------- index.js:18:8

Cannot apply type because it is not a polymorphic type.

   18| (null: Object<mixed>);
              ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- index.js:19:8

Cannot apply type because it is not a polymorphic type.

   19| (null: Function<mixed>);
              ^^^^^^^^^^^^^^^



Found 9 errors
